Se agrega try-catch.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Bccr.Diss.SopInt.CentralDirecto.UI.Test/bin/Debug/netcoreapp3.1
+/Bccr.Diss.SopInt.CentralDirecto.UI.Test/obj
+/.vs/Bccr.Diss.SopInt.CentralDirecto/v16
